OldHandins/Assignment 7/MicroC/CPar.fsyacc.output
Output file describing compiled parser placed in CPar.fs and CPar.fsi
------------------------
states = 
state 0:
  items:
    _startMain ->  . Main

  actions:
    action 'EOF' (noprec):   reduce Topdecs --> 
    action 'LPAR' (noprec):   reduce Topdecs --> 
    action 'RPAR' (noprec):   reduce Topdecs --> 
    action 'LBRACE' (noprec):   reduce Topdecs --> 
    action 'RBRACE' (noprec):   reduce Topdecs --> 
    action 'LBRACK' (noprec):   reduce Topdecs --> 
    action 'RBRACK' (noprec):   reduce Topdecs --> 
    action 'SEMI' (noprec):   reduce Topdecs --> 
    action 'COMMA' (noprec):   reduce Topdecs --> 
    action 'ASSIGN' (noprec):   reduce Topdecs --> 
    action 'AMP' (noprec):   reduce Topdecs --> 
    action 'NOT' (noprec):   reduce Topdecs --> 
    action 'SEQOR' (noprec):   reduce Topdecs --> 
    action 'SEQAND' (noprec):   reduce Topdecs --> 
    action 'EQ' (noprec):   reduce Topdecs --> 
    action 'NE' (noprec):   reduce Topdecs --> 
    action 'GT' (noprec):   reduce Topdecs --> 
    action 'LT' (noprec):   reduce Topdecs --> 
    action 'GE' (noprec):   reduce Topdecs --> 
    action 'LE' (noprec):   reduce Topdecs --> 
    action 'PLUS' (noprec):   reduce Topdecs --> 
    action 'MINUS' (noprec):   reduce Topdecs --> 
    action 'TIMES' (noprec):   reduce Topdecs --> 
    action 'DIV' (noprec):   reduce Topdecs --> 
    action 'MOD' (noprec):   reduce Topdecs --> 
    action 'INC' (noprec):   reduce Topdecs --> 
    action 'DEC' (noprec):   reduce Topdecs --> 
    action 'CHAR' (noprec):   shift 160
    action 'ELSE' (noprec):   reduce Topdecs --> 
    action 'IF' (noprec):   reduce Topdecs --> 
    action 'INT' (noprec):   shift 159
    action 'NULL' (noprec):   reduce Topdecs --> 
    action 'PRINT' (noprec):   reduce Topdecs --> 
    action 'PRINTLN' (noprec):   reduce Topdecs --> 
    action 'RETURN' (noprec):   reduce Topdecs --> 
    action 'VOID' (noprec):   shift 23
    action 'WHILE' (noprec):   reduce Topdecs --> 
    action 'QM' (noprec):   reduce Topdecs --> 
    action 'COLON' (noprec):   reduce Topdecs --> 
    action 'SWITCH' (noprec):   reduce Topdecs --> 
    action 'CASE' (noprec):   reduce Topdecs --> 
    action 'CSTSTRING' (noprec):   reduce Topdecs --> 
    action 'NAME' (noprec):   reduce Topdecs --> 
    action 'CSTINT' (noprec):   reduce Topdecs --> 
    action 'CSTBOOL' (noprec):   reduce Topdecs --> 
    action 'error' (noprec):   reduce Topdecs --> 
    action '#' (noprec):   reduce Topdecs --> 
    action '$$' (noprec):   reduce Topdecs --> 

  immediate action: <none>
 gotos:
    goto Main: 1
    goto Topdecs: 2
    goto Topdec: 4
    goto Vardec: 6
    goto Fundec: 8
    goto Type: 10

state 1:
  items:
    _startMain -> Main . 

  actions:
    action 'EOF' (noprec):   accept
    action 'LPAR' (noprec):   accept
    action 'RPAR' (noprec):   accept
    action 'LBRACE' (noprec):   accept
    action 'RBRACE' (noprec):   accept
    action 'LBRACK' (noprec):   accept
    action 'RBRACK' (noprec):   accept
    action 'SEMI' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'ASSIGN' (noprec):   accept
    action 'AMP' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'SEQOR' (noprec):   accept
    action 'SEQAND' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'NE' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'GE' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'DIV' (noprec):   accept
    action 'MOD' (noprec):   accept
    action 'INC' (noprec):   accept
    action 'DEC' (noprec):   accept
    action 'CHAR' (noprec):   accept
    action 'ELSE' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'NULL' (noprec):   accept
    action 'PRINT' (noprec):   accept
    action 'PRINTLN' (noprec):   accept
    action 'RETURN' (noprec):   accept
    action 'VOID' (noprec):   accept
    action 'WHILE' (noprec):   accept
    action 'QM' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'SWITCH' (noprec):   accept
    action 'CASE' (noprec):   accept
    action 'CSTSTRING' (noprec):   accept
    action 'NAME' (noprec):   accept
    action 'CSTINT' (noprec):   accept
    action 'CSTBOOL' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    Main -> Topdecs . 'EOF'

  actions:
    action 'EOF' (noprec):   shift 3
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACE' (noprec):   error
    action 'RBRACE' (noprec):   error
    action 'LBRACK' (noprec):   error
    action 'RBRACK' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'AMP' (noprec):   error
    action 'NOT' (noprec):   error
    action 'SEQOR' (noprec):   error
    action 'SEQAND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'INC' (noprec):   error
    action 'DEC' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'INT' (noprec):   error
    action 'NULL' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'PRINTLN' (noprec):   error
    action 'RETURN' (noprec):   error
    action 'VOID' (noprec):   error
    action 'WHILE' (noprec):   error
    action 'QM' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SWITCH' (noprec):   error
    action 'CASE' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 3:
  items:
    Main -> Topdecs 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'LPAR' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'RPAR' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'LBRACE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'RBRACE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'LBRACK' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'RBRACK' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'SEMI' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'COMMA' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'ASSIGN' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'AMP' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'NOT' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'SEQOR' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'SEQAND' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'EQ' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'NE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'GT' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'LT' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'GE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'LE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'PLUS' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'MINUS' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'TIMES' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'DIV' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'MOD' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'INC' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'DEC' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'CHAR' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'ELSE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'IF' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'INT' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'NULL' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'PRINT' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'PRINTLN' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'RETURN' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'VOID' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'WHILE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'QM' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'COLON' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'SWITCH' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'CASE' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'CSTSTRING' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'NAME' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'CSTINT' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'CSTBOOL' (noprec):   reduce Main --> Topdecs 'EOF'
    action 'error' (noprec):   reduce Main --> Topdecs 'EOF'
    action '#' (noprec):   reduce Main --> Topdecs 'EOF'
    action '$$' (noprec):   reduce Main --> Topdecs 'EOF'

  immediate action:   reduce Main --> Topdecs 'EOF'
 gotos:

state 4:
  items:
    Topdecs -> Topdec . Topdecs

  actions:
    action 'EOF' (noprec):   reduce Topdecs --> 
    action 'LPAR' (noprec):   reduce Topdecs --> 
    action 'RPAR' (noprec):   reduce Topdecs --> 
    action 'LBRACE' (noprec):   reduce Topdecs --> 
    action 'RBRACE' (noprec):   reduce Topdecs --> 
    action 'LBRACK' (noprec):   reduce Topdecs --> 
    action 'RBRACK' (noprec):   reduce Topdecs --> 
    action 'SEMI' (noprec):   reduce Topdecs --> 
    action 'COMMA' (noprec):   reduce Topdecs --> 
    action 'ASSIGN' (noprec):   reduce Topdecs --> 
    action 'AMP' (noprec):   reduce Topdecs --> 
    action 'NOT' (noprec):   reduce Topdecs --> 
    action 'SEQOR' (noprec):   reduce Topdecs --> 
    action 'SEQAND' (noprec):   reduce Topdecs --> 
    action 'EQ' (noprec):   reduce Topdecs --> 
    action 'NE' (noprec):   reduce Topdecs --> 
    action 'GT' (noprec):   reduce Topdecs --> 
    action 'LT' (noprec):   reduce Topdecs --> 
    action 'GE' (noprec):   reduce Topdecs --> 
    action 'LE' (noprec):   reduce Topdecs --> 
    action 'PLUS' (noprec):   reduce Topdecs --> 
    action 'MINUS' (noprec):   reduce Topdecs --> 
    action 'TIMES' (noprec):   reduce Topdecs --> 
    action 'DIV' (noprec):   reduce Topdecs --> 
    action 'MOD' (noprec):   reduce Topdecs --> 
    action 'INC' (noprec):   reduce Topdecs --> 
    action 'DEC' (noprec):   reduce Topdecs --> 
    action 'CHAR' (noprec):   shift 160
    action 'ELSE' (noprec):   reduce Topdecs --> 
    action 'IF' (noprec):   reduce Topdecs --> 
    action 'INT' (noprec):   shift 159
    action 'NULL' (noprec):   reduce Topdecs --> 
    action 'PRINT' (noprec):   reduce Topdecs --> 
    action 'PRINTLN' (noprec):   reduce Topdecs --> 
    action 'RETURN' (noprec):   reduce Topdecs --> 
    action 'VOID' (noprec):   shift 23
    action 'WHILE' (noprec):   reduce Topdecs --> 
    action 'QM' (noprec):   reduce Topdecs --> 
    action 'COLON' (noprec):   reduce Topdecs --> 
    action 'SWITCH' (noprec):   reduce Topdecs --> 
    action 'CASE' (noprec):   reduce Topdecs --> 
    action 'CSTSTRING' (noprec):   reduce Topdecs --> 
    action 'NAME' (noprec):   reduce Topdecs --> 
    action 'CSTINT' (noprec):   reduce Topdecs --> 
    action 'CSTBOOL' (noprec):   reduce Topdecs --> 
    action 'error' (noprec):   reduce Topdecs --> 
    action '#' (noprec):   reduce Topdecs --> 
    action '$$' (noprec):   reduce Topdecs --> 

  immediate action: <none>
 gotos:
    goto Topdecs: 5
    goto Topdec: 4
    goto Vardec: 6
    goto Fundec: 8
    goto Type: 10

state 5:
  items:
    Topdecs -> Topdec Topdecs . 

  actions:
    action 'EOF' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'LPAR' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'RPAR' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'LBRACE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'RBRACE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'LBRACK' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'RBRACK' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'SEMI' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'COMMA' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'ASSIGN' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'AMP' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'NOT' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'SEQOR' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'SEQAND' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'EQ' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'NE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'GT' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'LT' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'GE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'LE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'PLUS' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'MINUS' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'TIMES' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'DIV' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'MOD' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'INC' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'DEC' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'CHAR' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'ELSE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'IF' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'INT' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'NULL' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'PRINT' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'PRINTLN' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'RETURN' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'VOID' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'WHILE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'QM' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'COLON' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'SWITCH' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'CASE' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'CSTSTRING' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'NAME' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'CSTINT' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'CSTBOOL' (noprec):   reduce Topdecs --> Topdec Topdecs
    action 'error' (noprec):   reduce Topdecs --> Topdec Topdecs
    action '#' (noprec):   reduce Topdecs --> Topdec Topdecs
    action '$$' (noprec):   reduce Topdecs --> Topdec Topdecs

  immediate action:   reduce Topdecs --> Topdec Topdecs
 gotos:

state 6:
  items:
    Topdec -> Vardec . 'SEMI'

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACE' (noprec):   error
    action 'RBRACE' (noprec):   error
    action 'LBRACK' (noprec):   error
    action 'RBRACK' (noprec):   error
    action 'SEMI' (noprec):   shift 7
    action 'COMMA' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'AMP' (noprec):   error
    action 'NOT' (noprec):   error
    action 'SEQOR' (noprec):   error
    action 'SEQAND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'INC' (noprec):   error
    action 'DEC' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'INT' (noprec):   error
    action 'NULL' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'PRINTLN' (noprec):   error
    action 'RETURN' (noprec):   error
    action 'VOID' (noprec):   error
    action 'WHILE' (noprec):   error
    action 'QM' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SWITCH' (noprec):   error
    action 'CASE' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 7:
  items:
    Topdec -> Vardec 'SEMI' . 

  actions:
    action 'EOF' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'LPAR' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'RPAR' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'LBRACE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'RBRACE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'LBRACK' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'RBRACK' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'SEMI' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'COMMA' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'ASSIGN' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'AMP' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'NOT' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'SEQOR' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'SEQAND' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'EQ' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'NE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'GT' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'LT' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'GE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'LE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'PLUS' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'MINUS' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'TIMES' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'DIV' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'MOD' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'INC' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'DEC' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'CHAR' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'ELSE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'IF' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'INT' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'NULL' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'PRINT' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'PRINTLN' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'RETURN' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'VOID' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'WHILE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'QM' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'COLON' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'SWITCH' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'CASE' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'CSTSTRING' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'NAME' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'CSTINT' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'CSTBOOL' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action 'error' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action '#' (noprec):   reduce Topdec --> Vardec 'SEMI'
    action '$$' (noprec):   reduce Topdec --> Vardec 'SEMI'

  immediate action:   reduce Topdec --> Vardec 'SEMI'
 gotos:

state 8:
  items:
    Topdec -> Fundec . 

  actions:
    action 'EOF' (noprec):   reduce Topdec --> Fundec
    action 'LPAR' (noprec):   reduce Topdec --> Fundec
    action 'RPAR' (noprec):   reduce Topdec --> Fundec
    action 'LBRACE' (noprec):   reduce Topdec --> Fundec
    action 'RBRACE' (noprec):   reduce Topdec --> Fundec
    action 'LBRACK' (noprec):   reduce Topdec --> Fundec
    action 'RBRACK' (noprec):   reduce Topdec --> Fundec
    action 'SEMI' (noprec):   reduce Topdec --> Fundec
    action 'COMMA' (noprec):   reduce Topdec --> Fundec
    action 'ASSIGN' (noprec):   reduce Topdec --> Fundec
    action 'AMP' (noprec):   reduce Topdec --> Fundec
    action 'NOT' (noprec):   reduce Topdec --> Fundec
    action 'SEQOR' (noprec):   reduce Topdec --> Fundec
    action 'SEQAND' (noprec):   reduce Topdec --> Fundec
    action 'EQ' (noprec):   reduce Topdec --> Fundec
    action 'NE' (noprec):   reduce Topdec --> Fundec
    action 'GT' (noprec):   reduce Topdec --> Fundec
    action 'LT' (noprec):   reduce Topdec --> Fundec
    action 'GE' (noprec):   reduce Topdec --> Fundec
    action 'LE' (noprec):   reduce Topdec --> Fundec
    action 'PLUS' (noprec):   reduce Topdec --> Fundec
    action 'MINUS' (noprec):   reduce Topdec --> Fundec
    action 'TIMES' (noprec):   reduce Topdec --> Fundec
    action 'DIV' (noprec):   reduce Topdec --> Fundec
    action 'MOD' (noprec):   reduce Topdec --> Fundec
    action 'INC' (noprec):   reduce Topdec --> Fundec
    action 'DEC' (noprec):   reduce Topdec --> Fundec
    action 'CHAR' (noprec):   reduce Topdec --> Fundec
    action 'ELSE' (noprec):   reduce Topdec --> Fundec
    action 'IF' (noprec):   reduce Topdec --> Fundec
    action 'INT' (noprec):   reduce Topdec --> Fundec
    action 'NULL' (noprec):   reduce Topdec --> Fundec
    action 'PRINT' (noprec):   reduce Topdec --> Fundec
    action 'PRINTLN' (noprec):   reduce Topdec --> Fundec
    action 'RETURN' (noprec):   reduce Topdec --> Fundec
    action 'VOID' (noprec):   reduce Topdec --> Fundec
    action 'WHILE' (noprec):   reduce Topdec --> Fundec
    action 'QM' (noprec):   reduce Topdec --> Fundec
    action 'COLON' (noprec):   reduce Topdec --> Fundec
    action 'SWITCH' (noprec):   reduce Topdec --> Fundec
    action 'CASE' (noprec):   reduce Topdec --> Fundec
    action 'CSTSTRING' (noprec):   reduce Topdec --> Fundec
    action 'NAME' (noprec):   reduce Topdec --> Fundec
    action 'CSTINT' (noprec):   reduce Topdec --> Fundec
    action 'CSTBOOL' (noprec):   reduce Topdec --> Fundec
    action 'error' (noprec):   reduce Topdec --> Fundec
    action '#' (noprec):   reduce Topdec --> Fundec
    action '$$' (noprec):   reduce Topdec --> Fundec

  immediate action:   reduce Topdec --> Fundec
 gotos:

state 9:
  items:
    Vardec -> Type . Vardesc

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 16
    action 'RPAR' (noprec):   error
    action 'LBRACE' (noprec):   error
    action 'RBRACE' (noprec):   error
    action 'LBRACK' (noprec):   error
    action 'RBRACK' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'AMP' (noprec):   error
    action 'NOT' (noprec):   error
    action 'SEQOR' (noprec):   error
    action 'SEQAND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (explicit left 9998):   shift 14
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'INC' (noprec):   error
    action 'DEC' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'INT' (noprec):   error
    action 'NULL' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'PRINTLN' (noprec):   error
    action 'RETURN' (noprec):   error
    action 'VOID' (noprec):   error
    action 'WHILE' (noprec):   error
    action 'QM' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SWITCH' (noprec):   error
    action 'CASE' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   shift 12
    action 'CSTINT' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Vardesc: 11

state 10:
  items:
    Vardec -> Type . Vardesc
    Fundec -> Type . 'NAME' 'LPAR' Paramdecs 'RPAR' Block

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 16
    action 'RPAR' (noprec):   error
    action 'LBRACE' (noprec):   error
    action 'RBRACE' (noprec):   error
    action 'LBRACK' (noprec):   error
    action 'RBRACK' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'AMP' (noprec):   error
    action 'NOT' (noprec):   error
    action 'SEQOR' (noprec):   error
    action 'SEQAND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (explicit left 9998):   shift 14
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'INC' (noprec):   error
    action 'DEC' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'INT' (noprec):   error
    action 'NULL' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'PRINTLN' (noprec):   error
    action 'RETURN' (noprec):   error
    action 'VOID' (noprec):   error
    action 'WHILE' (noprec):   error
    action 'QM' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SWITCH' (noprec):   error
    action 'CASE' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   shift 13
    action 'CSTINT' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Vardesc: 11

state 11:
  items:
    Vardec -> Type Vardesc . 
    Vardesc -> Vardesc . 'LBRACK' 'RBRACK'
    Vardesc -> Vardesc . 'LBRACK' 'CSTINT' 'RBRACK'
